# MLA

./: 404.html  CRYPTO.html  Cargo.toml  ENTRY_NAME.html  FORMAT.html  KEY_DERIVATION.html  index.html  print.html  searchindex.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bench.yml  mla_release.yml  mlar_release.yml  test.yml
bindings/C/: Cargo.toml
doc/src/: SUMMARY.md  migration.md
mla/: Cargo.toml
mla-fuzz-afl/: Cargo.toml
mla/src/: lib.rs
mlakey-parser/: Cargo.toml
mlar/mlar-legacy/: Cargo.toml
mlar/mlar-legacy/src/: main.rs
mlar/mlar-upgrade/: Cargo.toml
mlar/mlar-upgrader/: CHANGELOG.md  Cargo.toml
mlar/mlar-upgrader/src/: main.rs
