[package]
name = "mlar-legacy"
description = "A wrapper around the MLA 2 library for common use cases and MLA 1 for extract and repair features"
version = "1.9.0"
authors = ["Club SSI <club@ssi.gouv.fr>"]
edition = "2024"
license = "LGPL-3.0-only"
homepage = "https://github.com/ANSSI-FR/MLA"
repository = "https://github.com/ANSSI-FR/MLA"
readme = "../../README.md"

[dependencies]
clap = { version = "4.5", default-features = false, features = ["std", "help", "color", "suggestions"] }
glob = "0.3"
# mla1
mla1 = { package = "mla", version = "1.4" }
curve25519-parser = "0.4"
# mla
mla = { path = "../../mla", version = "2" }
mlakey-parser = { path = "../../mlakey-parser", version = "0", default-features = false }
# Could be made optional / feature to enable (for binary size)
lru = "0.14"
