[package]
name = "mlar-legacy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["wrap_help"] }
# curve25519-parser = { version = "0.4" }
glob = "0.3"
mla_v1 = { version = "1", registry = "crates-io", package = "mla" }
mla = { path = "../../mla", version = "2" }
# Could be made optional / feature to enable (for binary size)
lru = "0.13"
