[package]
name = "mlar-upgrader"
description = "An archive upgrader towards MLA 2 from MLA 1. It is a wrapper around mlar 1.3 for MLA 1 and mlar 2.0 for MLA 2"
version = "1.0.0"
authors = ["Club SSI <club@ssi.gouv.fr>"]
edition = "2024"
license = "LGPL-3.0-only"
homepage = "https://github.com/ANSSI-FR/MLA"
repository = "https://github.com/ANSSI-FR/MLA"
readme = "../../README.md"

[dependencies]
clap = { version = "4.5", default-features = false, features = ["std", "help", "color", "suggestions"] }
